Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1406

Missing kudu.master_addresses in TBLPROPERTIES via Web UI

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • 0.7.1
    • 0.9.0
    • None
    • None

    Description

      I noticed that after a table is created using the Java APIs or the Impala shell, the IMPALA Create Table statement shown on the Kudu Web UI (someHost:8051/table?id=someTableId) has an empty kudu.master_addresses field:

      Impala CREATE TABLE statement
      CREATE EXTERNAL TABLE `kudu_table4` (
      `c1` INT,
      `c2` INT,
      `c3` STRING,
      `c4` DOUBLE,
      `c5` FLOAT
      )
      TBLPROPERTIES(
      'storage_handler' = 'com.cloudera.kudu.hive.KuduStorageHandler',
      'kudu.table_name' = 'kudu_table4',
      'kudu.master_addresses' = '',
      'kudu.key_columns' = 'c1'
      );

      If I do a 'desc formatted kudu_table4' I do see the correct properties so probably something in the web UI code (master-path-handlers.cc?) where the master_addresses?

      Attachments

        Activity

          People

            sabhyankar Sameer Abhyankar
            sabhyankar Sameer Abhyankar
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: