KUDU-1406: Fix empty kudu.master_addresses in TBLPROPERTIES via Web UI

- all_addresses is a vector<string> that is defined but never initialized.
The empty all_addresses is then assigned incorrectly to master_addresses.
This patch correctly initializes and sets the values for all_addresses.

Change-Id: I5a8930330dce2b255ec49a1ab95e1caf37f5bf00
Reviewed-on: http://gerrit.cloudera.org:8080/2744
Reviewed-by: Todd Lipcon <todd@apache.org>
Tested-by: Kudu Jenkins